# drop

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  project.json  pyproject.toml
backend/: alembic.ini  auth.py  cleanup.py  config.py  database.py  main.py
backend/api/download/controllers/: download_controller.py
backend/api/download/services/: download_service.py
backend/api/files/controllers/: files_controller.py
backend/api/files/dto/: file.py
backend/api/files/orm/: __init__.py  file_model.py
backend/api/files/repositories/: files_repository.py
backend/api/files/services/: files_service.py
backend/api/pages/controllers/: pages_controller.py
backend/db_migrations/: env.py
backend/db_migrations/versions/: 20260216_1647_3fcf3cb55cbc_initial_tables.py
backend/orm/: __init__.py
cli/: drop.sh
cmd/server/: main.go
internal/api/download/: handler.go  service.go
internal/api/files/: dto.go  handler.go  model.go  repository.go  service.go
internal/api/pages/: handler.go
internal/api/settings/: dto.go  handler.go  model.go  repository.go  service.go
internal/api/upload/: dto.go  handler.go  service.go
internal/cleanup/: cleanup.go
internal/config/: config.go
internal/database/: database.go
internal/database/migrations/: 20260216164700_initial_tables.sql
internal/middleware/: auth.go
scripts/: publish.sh
static/: style.css
templates/: _dashboard_content.html  _file_row.html  _stats.html  base.html  dashboard.html  login.html  settings.html  unauthorized.html
(+9 files in other folders)
