[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drop"
version = "0.1.0"
description = "Self-hosted encrypted file transfer"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.18",
    "pydantic>=2.10.0",
]
